--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML/CSS Card component</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <main>
+      <div class="wrapper">
+
+        <div class="os-product-card">
+
+          <div class="os-product-img"
+            style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);">
+          </div>
+
+          <div class="os-product-content">
+
+            <div class="os-product-price-rating">
+              <div class="os-product-rating">
+                <span>1.23</span>
+                <span class="rating-star">
+                  <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M9.26296 3.60776L6.99999 0L4.73701 3.60776L0.34259 4.49139L3.33842 7.60474L2.88549 11.7586L6.99999 10.075L11.1145 11.7586L10.6616 7.60474L13.6574 4.49139L9.26296 3.60776ZM11.6722 5.11223L8.64429 4.50338L6.99999 1.88193L5.35568 4.50338L2.32777 5.11223L4.38321 7.24829L4.06171 10.1968L6.99999 8.99452L9.93826 10.1968L9.61676 7.24829L11.6722 5.11223Z"
+                      fill="white" />
+                  </svg>
+                </span>
+              </div>
+              <div class="os-product-price">15999</div>
+            </div>
+
+            <h5 class="os-product-title">
+              Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </h5>
+            <p class="os-product-description">laptops</p>
+          </div>
+
+          <footer class="os-product-footer">
+            <button class="os-product-btn">
+              ADD TO CART
+            </button>
+          </footer>
+
+        </div>
+      </div>
+    </main>
+  </body>
+
 </html>
