--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,28 +4,45 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <img src="./Rectangle.png" alt="image" class="top-image">
+    <div class="os-product-card">
+      <div
+      class="os-product-img">
+    <img src="./Rectangle.png" alt="image" class="os-product-img">
+     </div>
 
+    <div class="os-product-content">
+      <div class="os-product-price-wrapper">
+        <div class="os-product-rating">
+          <span>2.89</span>
+          <i class="bi bi-star">&nbsp;</i>
+        </div>
 
-      <div class="top-center">
-        <div class="star">
-          <button class="bottom-star"> <img src="./Star 1.png" alt="star" class="star-img"> 1.23</button>
-
+        <div class="os-product-price">15999</div>
       </div>
-        <div class="top-center-text">1599</div>
-      </div>
-      <div class="top-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black </div>
-      <div class="top-title-img">laptop</div>
 
-    <div class="bottom">
-      <button class="bottom-button">ADD TO CART</button>
-    </div>
-    <!-- Card component -->
+
+      <h5 class="os-product-title">
+        Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+      </h5>
+      <p class="os-product-description">laptops</p>
+ </div>
+
+
+
+
+    <footer class="os-product-footer">
+      <button class="os-btn-primary" data-element="addToCartBtn">
+        ADD TO CART
+      </button>
+    </footer>
+
+  </div>
   </div>
 </main>
 </body>
