--- a/components/card/style.css
+++ b/components/card/style.css
@@ -1,74 +1,92 @@
 .wrapper {
-  width: 317px;
-  height: 394px;
+  width: 400px;
+
   margin: 100px auto;
-  border: 1px solid #7E72F2;
+
+
+}
+
+.os-product-card {
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, .135216);
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #fff;
+  display: grid;
+  align-content: space-between;
+  grid-template-rows: 0.5fr 0.5fr 40px;
+}
+
+
+.os-product-img {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-}
-
-.bottom-button {
-  background-color: #7E72F2;
-  color: #FFFFFF;
-  text-align: center;
-  width: 317px;
-  height: 40px;
-}
-.bottom-star {
-  background-color: #7E72F2;
-  color: #FFFFFF;
-
-  width: 70px;
-  height: 27px;
-  padding-left: 1rem;
-
-}
-.top-title {
-  color: #2C2C2C;
-  font-size: 13px;
-  text-align: justify;
-  padding-right: 32px;
-  padding-left: 24px;
-  font-family: 'Montserrat';
-}
-
-
-.top-title-img {
-  color: #2C2C2C;
-  font-size: 10px;
-  text-align: left;
-  padding-left: 24px;
-}
-
-.top-image {
-
-  display: block;
-  margin: 0 auto;
-  width: 293px;
   height: 200px;
+  justify-content: center;
+  margin: 12px 12px 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center
+}
+
+.os-product-content {
+  padding: 22px 24px
+}
+
+.os-product-price-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px
+}
+
+.os-product-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1;
+  max-width: 70px;
+  padding: 6px 12px;
+  border-radius: 3x;
+  background-color: #7e72f2;
+  color: #fff;
+  font-size: .875rem;
+  font-weight: 400
 }
 
 
-.top-center {
-
-
-      display: flex;
-
-
-    }
-
-
-.top-center-text{
-  width: 50%;
-  height: 100% ;
-  text-align: right;
-  padding-right: 25px;
+os-product-price {
+  color: #2c2c2c;
+  font-size: 1.125rem;
+  font-weight: 400
 }
-.star {
-  width: 50%;
-  height: 100% ;
-  text-align: left;
-  padding-left: 24px;
+
+.os-product-title,
+.os-product-description {
+  margin: 0;
+  font-weight: normal;
+  color: #2c2c2c
 }
+
+.os-product-title {
+  font-size: 1rem;
+  margin-bottom: 8px
+}
+
+.os-product-description {
+  font-size: .75rem
+}
+
+.os-product-footer {
+  display: grid;
+  grid-template-columns: 1fr
+}
+
+.os-product-footer button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  border-radius: 0
+}
+
+.bi-star::before { content: "\f588"; }
