--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -5,17 +5,77 @@
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 <body>
 
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+
+    <nav class="os-pagination">
+
+    <a href="#" data-element="nav-prev" class="page-link previous">
+      <i class="bi bi-chevron-left"></i>
+    </a>
+
+<ul class="page-list" data-element="pagination">
+  <li >
+<a href="#" data-element="page-link active" class="page-link active" data-page-index="0">1</a>
+  </li>
+
+  <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="1">2</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="2">3</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="3">4</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="4">5</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="5">6</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="6">7</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="7">8</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="9">10</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="10">11</a>
+   </li>
+
+   <li >
+    <a href="#" data-element="page-link" class="page-link" data-page-index="11">12</a>
+   </li>
+
+
+</ul>
+
+<a href="#" data-element="nav-next" class="page-link next">
+  <i class="bi bi-chevron-right"></i>
+</a>
+
+</nav>
+
+
+
   </div>
 </main>
 
