--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">-->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <main>
   <div class="wrapper">
+    <i class="bi bi-chevron-double-left"></i>
     <div class="Chevron-left"><button class="Border-off"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-    </svg></button></div>
+    </svg> </button></div>
 
       <div class="Buttons-box">
         <button class="Buttons"> 1</button>
