homework_online-store

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   <style>
     .wrapper {
@@ -15,8 +16,26 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="card-img">
+      <img src="../../components/card/163399632.jpg"alt="Laptop-photo">
+    </div>
+    <div class="card-rating">
+      <div class="card-rating-number">1.23<img src="../../components/card/Star 1 (Stroke).svg"alt="star"/></div>
+      <div class="card-price">15999</div>
+    </div>
+    <div class="card-category">
+      <div class="card-text">Ноутбук Acer Aspire 3 A315-57G-336G<br>(NX.HZREU.01S) Charcoal Black</div>
+      <div class="laptop">
+        <span>
+        laptops
+        </span>
+      </div>
+    </div>
+    <div class="card-button">
+      <button>ADD TO CART</button>
+    </div>
   </div>
 </main>
 </body>
 </html>
+
