--- a/components/pagination/solution/index.html
+++ b/components/pagination/solution/index.html
@@ -6,6 +6,7 @@
   <title>HTML/CSS Pagination component</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="pagination-style.css"/>
 
   <style>
@@ -22,7 +23,20 @@
       <a href="#" class="page-link previous" data-element="nav-prev">
         <i class="bi bi-chevron-left"></i>
       </a>
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-secondary">Secondary</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+      <button type="button" class="btn btn-warning">Warning</button>
+      <button type="button" class="btn btn-info">Info</button>
+      <button type="button" class="btn btn-light">Light</button>
+      <button type="button" class="btn btn-dark">Dark</button>
 
+      <button type="button" class="btn btn-link">Link</button>
+
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+      </div>
       <ul class="page-list" data-element="pagination">
         <li>
           <a href="#" data-element="page-link" class="page-link active" data-page-index="0">1</a>
