add not all elements

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -5,17 +5,37 @@
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+    <footer data-element="pagination" class="products-footer">
+      <nav class="pagination">
+        <a class="page-link previous">
+          <i class="bi-chevron-left">
+          </i>
+        </a>
+        <ul class="page-list" data-element="pagination" >
+          <li><a data-element="page-link" class="page-link active">1</a></li>
+          <li><a data-element="page-link" class="page-link active">2</a></li>
+          <li><a data-element="page-link" class="page-link active">3</a></li>
+          <li><a data-element="page-link" class="page-link active">4</a></li>
+          <li><a data-element="page-link" class="page-link active">5</a></li>
+          <li><a data-element="page-link" class="page-link active">6</a></li>
+          <li><a data-element="page-link" class="page-link active">7</a></li>
+          <li><a data-element="page-link" class="page-link active">8</a></li>
+          <li><a data-element="page-link" class="page-link active">9</a></li>
+          <li><a data-element="page-link" class="page-link active">10</a></li>
+          <li><a data-element="page-link" class="page-link active">11</a></li>
+          <li><a data-element="page-link" class="page-link active">12</a></li>
+        </ul>
+        <a class="page-link next">
+          <i class="bi bi-chevron-right"></i>
+        </a>
+      </nav>
+    </footer>
   </div>
 </main>
 
