--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -11,24 +11,27 @@
 <body>
   <main>
     <div class="osnova">
-      <div class="ramka">
-        <div class="krug krug-right"><i class="bi bi-chevron-left"></i></div>
-        <div class="krug">1</div>
-        <div class="krug">2</div>
-        <div class="krug">3</div>
-        <div class="krug">4</div>
-        <div class="krug">5</div>
-        <div class="krug">6</div>
-        <div class="krug">7</div>
-        <div class="krug">8</div>
-        <div class="krug">9</div>
-        <div class="krug">10</div>
-        <div class="krug">11</div>
-        <div class="krug">12</div>
-        <div class="krug krug-left"><i class="bi bi-chevron-right"></i></div>
-      </div>
+      <nav class="ramka">
+
+        <ul class="krug krug-right"><i class="bi bi-chevron-left"></i></ul>
+
+        <ul class="krug"><li>1</li></ul>
+        <ul class="krug"><li>2</li></ul>
+        <ul class="krug"><li>3</li></ul>
+        <ul class="krug"><li>4</li></ul>
+        <ul class="krug"><li>5</li></ul>
+        <ul class="krug"><li>6</li></ul>
+        <ul class="krug"><li>7</li></ul>
+        <ul class="krug"><li>8</li></ul>
+        <ul class="krug"><li>9</li></ul>
+        <ul class="krug"><li>10</li></ul>
+        <ul class="krug"><li>11</li></ul>
+        <ul class="krug"><li>12</li></ul>
+
+        <ul class="krug krug-left"><i class="bi bi-chevron-right"></i></ul>
+
+      </nav>
     </div>
   </main>
 </body>
-
 </html>
