--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -1,10 +1,10 @@
 .osnova {outline: 1px solid;
   width: 790px;
-height: 205px;
-margin: 0 auto;
-display: flex;
-justify-content: center;
-align-items: center;}
+  height: 205px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;}
 
   .ramka {
     /* outline: 1px solid; */
@@ -17,6 +17,7 @@ align-items: center;}
     .krug {
       /* border: 1px solid; */
       background: #DCDCDC;
+      padding: 0px;
       width: 40px;
       height: 40px;
       border-radius: 50%;
@@ -24,8 +25,12 @@ align-items: center;}
       font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       display: flex;
       justify-content: center;
-      align-items: center;}
-    .krug:hover {background: #0000CD;}
+      align-items: center;
+      list-style: none;
+      transition: .5s;
+      cursor: pointer;}
+    .krug:hover {background: #0000CD;
+      color: white;}
 
     .krug-left {margin-left: 17px;}
     .krug-right {margin-right: 17px;}
