--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -5,7 +5,7 @@
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="pagination-style.css">
 
 </head>
 <body>
@@ -16,9 +16,9 @@
     <nav class="card-pagination font-montserrat-400">
       <a class="panigation-arrow-left" href="#"><i class="bi bi-chevron-left"></i></a>
       <ul class="pagination-block ">
-        <li class="pagination-item"><a href="#" >1</a></li>
+        <li class="pagination-item active"><a href="#" >1</a></li>
         <li class="pagination-item"><a href="#" >2</a></li>
-        <li class="pagination-item"><a href="#" >3</a></li>
+        <li class="pagination-item "><a href="#" >3</a></li>
         <li class="pagination-item"><a href="#" >4</a></li>
         <li class="pagination-item"><a href="#" >5</a></li>
         <li class="pagination-item"><a href="#" >6</a></li>
