--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -13,61 +13,72 @@
         </div>
       </div>
       <div class="centr">
-        <div class="q">
+        <a class="ssylka" href="#"><div class="q">
          <div class="text">
            1
          </div>
-        </div>
-        <div class="q">
-          <div class="text">
-            2
-          </div>
-        </div>
-        <div class="q">
-          <div class="text">
-            3
-          </div>
-        </div>
-        <div class="q">
-          <div class="text">
-            4
-          </div>
-        </div>
-        <div class="q">
-          <div class="text">
-            5
-          </div>
-        </div>
-        <div class="q">
-          <div class="text">
-            6
-          </div>
-        </div>
-        <div class="q">
+        </div></a>
+        <a class="ssylka" href="#"> <div class="q">
+           <div class="text">
+             2
+           </div>
+         </div></a>
+         <a class="ssylka" href="#"><div class="q">
+           <div class="text">
+             3
+           </div>
+         </div></a>
+         <a class="ssylka" href="#"><div class="q">
+           <div class="text">
+             4
+           </div>
+         </div></a>
+         <a class="ssylka" href="#"><div class="q">
+           <div class="text">
+             5
+           </div>
+         </div></a>
+         <a class="ssylka" href="#"><div class="q">
+           <div class="text">
+             6
+           </div>
+         </div></a>
+        <a class="ssylka" href="#"><div class="q">
           <div class="text">
             7
           </div>
-        </div>
-        <div class="q">
+        </div></a>
+        <a class="ssylka" href="#"><div class="q">
           <div class="text">
             8
           </div>
-        </div>
-        <div class="q">
+        </div></a>
+        <a class="ssylka" href="#"><div class="q">
           <div class="text">
             9
           </div>
-        </div>
-        <div class="q">
+        </div></a>
+        <a class="ssylka" href="#"><div class="q">
           <div class="text">
             10
           </div>
-        </div>
+        </div></a>
+        <a class="ssylka" href="#"><div class="q">
+          <div class="text">
+            11
+          </div>
+        </div></a>
+        <a class="ssylka" href="#"><div class="q">
+          <div class="text">
+            12
+          </div>
+        </div></a>
+
       </div>
       <div class="right">
-        <div class="text">
+        <a class="ssylka" href="#"><div class="text">
           >
-        </div>
+        </div></a>
       </div>
     </div>
   </body>
