--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -23,7 +23,7 @@ background: rgba(135, 33, 134, 0.07);
 }
 
 .centr {
-  width: 500px;
+  width: 650px;
   height: 50px;
 margin-left: -25px;
 margin-right: -25px;
@@ -72,4 +72,8 @@ background: rgba(135, 33, 134, 0.07);
 }
 .text {margin: auto;
 padding-top: 15px
+}
+.ssylka {
+  text-decoration: none;
+  color: black;
 }
