--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <style>
     .wrapper {
