--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -16,21 +16,22 @@
 <body>
 
     <main>
-        <div class="os-pagination">
-            <div class="number-left">&lt;</div>
-            <div class="number-one">1</div>
-            <div class="number">2</div>
-            <div class="number">3</div>
-            <div class="number">4</div>
-            <div class="number">5</div>
-            <div class="number">6</div>
-            <div class="number">7</div>
-            <div class="number">8</div>
-            <div class="number">9</div>
-            <div class="number">10</div>
-            <div class="number-right">&gt;</div>
+        <div class="wrapper">
+            <div class="os-pagination">
+                <div class="number-left">&lt;</div>
+                <div class="number-one">1</div>
+                <div class="number">2</div>
+                <div class="number">3</div>
+                <div class="number">4</div>
+                <div class="number">5</div>
+                <div class="number">6</div>
+                <div class="number">7</div>
+                <div class="number">8</div>
+                <div class="number">9</div>
+                <div class="number">10</div>
+                <div class="number-right">&gt;</div>
+            </div>
         </div>
-
     </main>
 
 </body>
