--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -17,40 +17,40 @@
       </a>
     <ul class="page-list">
       <li>
-        <a href="#" class="page-number active">1</a>
+        <a href="#" data-element="page-number" class="page-number active">1</a>
       </li>
       <li>
-        <a href="#" class="page-number">2</a>
+        <a href="#" data-element="page-number" class="page-number">2</a>
       </li>
       <li>
-        <a href="#" class="page-number">3</a>
+        <a href="#" data-element="page-number" class="page-number">3</a>
       </li>
       <li>
-        <a href="#" class="page-number">4</a>
+        <a href="#" data-element="page-number" class="page-number">4</a>
       </li>
       <li>
-        <a href="#" class="page-number">5</a>
+        <a href="#" data-element="page-number" class="page-number">5</a>
       </li>
       <li>
-        <a href="#" class="page-number">6</a>
+        <a href="#" data-element="page-number" class="page-number">6</a>
       </li>
       <li>
-        <a href="#" class="page-number">7</a>
+        <a href="#" data-element="page-number" class="page-number">7</a>
       </li>
       <li>
-        <a href="#" class="page-number">8</a>
+        <a href="#" data-element="page-number" class="page-number">8</a>
       </li>
       <li>
-        <a href="#" class="page-number">9</a>
+        <a href="#" data-element="page-number" class="page-number">9</a>
       </li>
       <li>
-        <a href="#" class="page-number">10</a>
+        <a href="#" data-element="page-number" class="page-number">10</a>
       </li>
       <li>
-        <a href="#" class="page-number">11</a>
+        <a href="#" data-element="page-number" class="page-number">11</a>
       </li>
       <li>
-        <a href="#" class="page-number">12</a>
+        <a href="#" data-element="page-number" class="page-number">12</a>
       </li>
     </ul>
     <a href="#" class="arrow-right" data-element="nav-next">
