--- a/grid/css/style.css
+++ b/grid/css/style.css
@@ -8,16 +8,14 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
 }
 
 .col-1 {
-  width: calc(100% / 12);
+  width: calc(100% / 12 * 1);
 }
 
 .col-2 {
@@ -66,7 +64,7 @@
 
 @media (min-width: 576px) {
   .col-s-1 {
-    width: calc(100% / 12);
+    width: calc(100% / 12 * 1);
   }
   .col-s-2 {
     width: calc(100% / 12 * 2);
@@ -105,7 +103,7 @@
 
 @media (min-width: 768px) {
   .col-m-1 {
-    width: calc(100% / 12);
+    width: calc(100% / 12 * 1);
   }
   .col-m-2 {
     width: calc(100% / 12 * 2);
@@ -144,7 +142,7 @@
 
 @media (min-width: 992px) {
   .col-l-1 {
-    width: calc(100% / 12);
+    width: calc(100% / 12 * 1);
   }
   .col-l-2 {
     width: calc(100% / 12 * 2);
@@ -183,7 +181,7 @@
 
 @media (min-width: 1200px) {
   .col-xl-1 {
-    width: calc(100% / 12);
+    width: calc(100% / 12 * 1);
   }
   .col-xl-2 {
     width: calc(100% / 12 * 2);
