modified pagination component

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -18,22 +18,22 @@
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
-    <div class="pagination">
-      <div class="circle-button arrow">&lt</div>
-      <div class="circle-button">1</div>
-      <div class="circle-button">2</div>
-      <div class="circle-button">3</div>
-      <div class="circle-button">4</div>
-      <div class="circle-button">5</div>
-      <div class="circle-button">6</div>
-      <div class="circle-button">7</div>
-      <div class="circle-button">8</div>
-      <div class="circle-button">9</div>
-      <div class="circle-button">10</div>
-      <div class="circle-button">11</div>
-      <div class="circle-button">12</div>
-      <div class="circle-button arrow">&gt</div>
-    </div>
+    <nav class="pagination">
+      <div class="circle-button arrow" data-element="nav-prev">&lt</div>
+      <div class="circle-button" data-element="page-link">1</div>
+      <div class="circle-button" data-element="page-link">2</div>
+      <div class="circle-button" data-element="page-link">3</div>
+      <div class="circle-button" data-element="page-link">4</div>
+      <div class="circle-button" data-element="page-link">5</div>
+      <div class="circle-button" data-element="page-link">6</div>
+      <div class="circle-button" data-element="page-link">7</div>
+      <div class="circle-button" data-element="page-link">8</div>
+      <div class="circle-button" data-element="page-link">9</div>
+      <div class="circle-button" data-element="page-link">10</div>
+      <div class="circle-button" data-element="page-link">11</div>
+      <div class="circle-button" data-element="page-link">12</div>
+      <div class="circle-button arrow" data-element="nav-next">&gt</div>
+    </nav>
   </div>
 </main>
 
