[HW] Added grid

--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -6,7 +6,7 @@
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       </span>
 
       <ul class="os-pagination-page-list">
-        <li class="os-pagination-page-link">1</li>
+        <li class="os-pagination-page-link active">1</li>
         <li class="os-pagination-page-link">2</li>
         <li class="os-pagination-page-link">3</li>
         <li class="os-pagination-page-link">4</li>
