--- a/components/pagination/styles/style.css
+++ b/components/pagination/styles/style.css
@@ -35,7 +35,10 @@ body, html {
   border-radius: 20px;
 }
 
-.os-pagination-page-link:hover {
+.os-pagination-page-link:hover,
+.os-pagination-page-link.active {
   background-color: var(--purple-main);
   color: var(--white-main);
 }
+
+
