--- a/components/card/index.html
+++ b/components/card/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
-    .wrapper {
+    /* .wrapper {
       width: 400px;
       margin: 100px auto;
-    }
+    } */
   </style>
 </head>
 <body>
