--- a/components/card/style.css
+++ b/components/card/style.css
@@ -5,6 +5,12 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
 }
+.wrapper {
+  width: 100%;
+  margin: auto;
+  padding: 0px 15px;
+  box-sizing: border-box;
+}
 :root {
   --bg-main: #ffffff;
   --main-color: #7e72f2;
@@ -14,11 +20,10 @@ body {
   --text-active-color: #ffffff;
 }
 .os-product-card {
-  min-height: 20%;
-  min-width: 20rem;
-  height: 24.63rem;
-  width: 19.81rem;
-  max-width: 25rem;
+  /* max-height: 27rem; */
+  max-width: 100%;
+  min-height: 100%;
+  /* min-width: 400px; */
   box-sizing: border-box;
   background-color: var(--bg-main);
   border-radius: 0.5rem;
@@ -51,6 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: left;
 }
 
 .os-rating-price-bar {
@@ -92,6 +98,7 @@ body {
   color: var(--text-active-color);
   box-sizing: border-box;
   cursor: pointer;
+  margin 0;
 }
 .os-add-button:hover{
   background-color: var(--active-color);
