--- a/components/card/index.html
+++ b/components/card/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -15,7 +17,15 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+      <div class="picture"> <img src="https://placekitten.com/g/293/200" alt=""> </div>
+          <div class="raiting-price">
+            <div class="raiting"> 99.9 <i class="bi bi-star"></i> </div>
+            <div class="price"> 1599</div>
+          </div>
+        <div class="item-title">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</div>
+        <div class="type">laptops</div>
+        <div class="button">ADD TO CART </div>
+
   </div>
 </main>
 </body>
