--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -12,22 +12,47 @@
   <main>
     <div class="wrapper">
       <div class="pagination">
-        <i class="bi bi-arrow-left pagination-items"></i>
+        <i class="bi bi-chevron-left pagination-items"></i>
+        <ul class="links">
+          <li>
+            <a href="#" class="pagination-items item-active">1</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">2</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">3</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">4</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">5</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">6</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">7</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">8</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">9</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">10</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">11</a>
+          </li>
+          <li>
+            <a href="#" class="pagination-items item-active">12</a>
+          </li>
 
-        <a href="#" class="pagination-items item-active">1</a>
-        <a href="#" class="pagination-items">2</a>
-        <a href="#" class="pagination-items">3</a>
-        <a href="#" class="pagination-items">4</a>
-        <a href="#" class="pagination-items">5</a>
-        <a href="#" class="pagination-items">6</a>
-        <a href="#" class="pagination-items">7</a>
-        <a href="#" class="pagination-items">8</a>
-        <a href="#" class="pagination-items">9</a>
-        <a href="#" class="pagination-items">10</a>
-        <a href="#" class="pagination-items">11</a>
-        <a href="#" class="pagination-items">12</a>
-
-        <i class="bi bi-arrow-right pagination-items"></i>
+        </ul>
+        <i class="bi bi-chevron-right pagination-items"></i>
       </div>
     </div>
   </main>
