--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -5,6 +5,14 @@ a {
 
 .wrapper {
   margin: 100px auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.pagination {
   border: 1px solid #000000;
   width: 790px;
   height: 205px;
@@ -12,17 +20,13 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
 
-.pagination {
-  width: 100%;
-  height: 100%;
-
+.links {
   display: flex;
   align-items: center;
   justify-content: center;
+  list-style-type: none;
 }
 
 .pagination-items {
@@ -39,7 +43,9 @@ a {
 }
 
 .pagination-items:hover {
-  background: #b9b3ee;
+  background: #7E72F2;
+  color: white;
+  cursor: pointer;
 }
 
 
@@ -49,7 +55,7 @@ a {
 
 }
 
-.bi-arrow-right,
-.bi-arrow-left {
+.bi-chevron-right,
+.bi-chevron-left {
   margin: 0 15px;
 }
