--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -18,37 +18,37 @@
             <a href="#" class="pagination-items item-active">1</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">2</a>
+            <a href="#" class="pagination-items item">2</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">3</a>
+            <a href="#" class="pagination-items item">3</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">4</a>
+            <a href="#" class="pagination-items item">4</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">5</a>
+            <a href="#" class="pagination-items item">5</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">6</a>
+            <a href="#" class="pagination-items item">6</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">7</a>
+            <a href="#" class="pagination-items item">7</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">8</a>
+            <a href="#" class="pagination-items item">8</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">9</a>
+            <a href="#" class="pagination-items item">9</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">10</a>
+            <a href="#" class="pagination-items item">10</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">11</a>
+            <a href="#" class="pagination-items item">11</a>
           </li>
           <li>
-            <a href="#" class="pagination-items item-active">12</a>
+            <a href="#" class="pagination-items item">12</a>
           </li>
 
         </ul>
