--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -5,7 +5,10 @@
 }
 
 .wrapper {
+  margin: 100px auto;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: row;
   background: #FFFFFF;
   box-sizing: border-box;
