--- a/components/card/index.html
+++ b/components/card/index.html
@@ -3,20 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+  <main>
+    <div class="wrapper">
+      <div class="card-component">
+        <div class="card-component-foto">
+          <img src="./card-img/img.png" alt="foto">
+        </div>
+        <div class="card-component-rating-and-price">
+          <div class="card-component-rating">
+          <div class="card-component-rating-number">2.42</div>
+          <div class="card-component-rating-star">
+            <i class="bi bi-star"></i>
+          </div>
+          </div>
+          <div>22999</div>
+        </div>
+        <div class="card-component-about">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</div>
+        <div class="card-component-type">Laptops</div>
+        <button class="card-component-add-to-cart">ADD TO CART</button>
+      </div>
+      <!-- Card component -->
+    </div>
+  </main>
+  </body>
 </html>
