--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,21 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-
 <main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
+  <nav class="wrapper">
+    <ul class="pagination">
+      <li><button class="button button-bi-chevron-left">
+        <i class="bi bi-chevron-left"></i>
+      </button></li>
+      <li><button class="button active">1</button></li>
+      <li><button class="button">2</button></li>
+      <li><button class="button">3</button></li>
+      <li><button class="button">4</button></li>
+      <li><button class="button">5</button></li>
+      <li><button class="button">6</button></li>
+      <li><button class="button">7</button></li>
+      <li><button class="button">8</button></li>
+      <li><button class="button">9</button></li>
+      <li><button class="button">10</button></li>
+      <li><button class="button">11</button></li>
+      <li><button class="button">12</button></li>
+      <li><button class="button button-bi-chevron-right">
+        <i class="bi bi-chevron-right"></i>
+      </button></li>
+    </ul>
+  </nav>
 </main>
-
 </body>
 </html>
