--- a/components/card/index.html
+++ b/components/card/index.html
@@ -16,7 +16,25 @@
 <main>
   <div class="wrapper">
     <!-- Card component -->
+  <div class="product-card"
+  <div class="image"
+  <a href="#"> <img src="Images/Image.jpg" alt="Фото"></a>
+
   </div>
+  <div class="product-info">
+  <div class="rate">1.23
+    <i class="bi bi-star"></i>
+  </div>
+    <div class="price">15999
+  </div>
+  </div>
+
+  <p class="discription"> Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+</div>
+
+
+  </div>
+</div>
 </main>
 </body>
 </html>
