--- a/components/card/style.css
+++ b/components/card/style.css
@@ -44,6 +44,7 @@ table {
 	border-spacing: 0;
 }
 /* ===== */
+
 body{
     font-family: 'Montserrat', sans-serif;
 }
@@ -51,13 +52,12 @@ header{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding:0 95px;
+    padding:0 54px;
     margin:0 auto;
     height: 83px;
 }
 .wrapper {
-    width:1450px;
-    border:1px solid #000;
+    max-width:1450px;
     margin:0 auto;
 }
 .logo>a{
@@ -65,9 +65,12 @@ header{
     font-style: normal;
     font-weight: 400;
     font-size: 26px;
-    line-height: 16px;
+    line-height: 26px;
     font-family: 'Montserrat', sans-serif;
     text-decoration:none;
+}
+.logo{
+    text-align: center;
 }
 .basket{
     background: #7E72F2;
@@ -93,20 +96,86 @@ header{
 
 .container {
     display:flex;
-    justify-content:space-between;
+    justify-content:center;
     box-sizing: border-box;
-    width: 1450px;
-    padding:0px 95px 24px 
+    width: 100%;
+    padding:0px 54px 24px;
+    margin:0;
 }
+.filter{
+    padding: 3px 10px 3px 10px;
+    border-radius: 8px;
+    height:20px;
+    margin:0 0 25px;
+    background:#7E72F2;
+    color:#ffffff;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0;
+    line-height: 16px;
+    font-family: 'Montserrat', sans-serif;
+    cursor:pointer;
+    display: none;
+}
+.filter:active .burger{
+    width:0;
+}
+.filter:active .burger_menu::before{
+    transform: rotate(45deg);
+    transform-origin: 0 0;
+}
+.filter:active .burger_menu::after{
+    transform: rotate(-45deg);
+    transform-origin: 0 0;
+}
+.filter>p{
+    display: inline-block;    
+    font-size: 13px;
+    vertical-align: middle;
+}
+.burger_menu{
+    width:20px;
+    height:15px;
+    position:relative;
+    margin: 2px 0 0 5px;
+}
+.burger{
+    display: block;
+    position: absolute;
+    top:50%;
+    background:#ffffff;
+    transform:translateY(-50%);
+    left: 0;
+    width: 100%;
+    height:1px;
+    transition: all .8s linear;
+}
+.burger_menu::before, .burger_menu::after{
+    content:"";
+    position: absolute;
+    left: 0;
+    background:#ffffff;
+    width: 100%;
+    height:1px;
+    transition: all .8s linear;
+}
+.burger_menu::before{
+    top:0;
+}
+.burger_menu::after{
+    bottom:0;
+}
+
 .container_left{
-    width:280px;
-    margin:0 20px 0 0;
+    width:calc(100%/12*3);
+    padding:0 20px 0 0;
 }
 .container_filters{
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
     padding:25px 20px;
     border-radius: 8px;
+    margin:0 0 20px 0
 }
 input[type="checkbox"]{
     display:none;
@@ -188,17 +257,18 @@ h2{
     flex-direction: column;
     align-items:flex-end;
     justify-content: space-between;
+    width: calc(100%/12*9);
 }
 
 .container_search{
     position: relative;
-    width:990px;
+    width:100%;
     height:45px;
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     overflow: hidden;
-    margin:0 0 20px 0;
+    margin-bottom:20px;
 }
 .container_search>form{
     width:100%;
@@ -220,13 +290,17 @@ h2{
 }
 .container_shop {
     display:flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap-reverse;
-    width:990px;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    width:100%;
+    justify-content: start;
+}
+.container_product{
+    padding:0 20px 20px 0;
+}
+.container_product:nth-child(3n+3){
+    padding:0 0 20px 0;
 }
 .product {
-    margin:20px 0 0;
     Width:317px;
     padding:12px 0 0 0;
     background: #FFFFFF;
@@ -237,8 +311,6 @@ h2{
     flex-direction: column;
     justify-content: space-between;
 }
-.product:nth-child(3n+2){
-    margin:20px 0 0;
 }
 .img {
     width:293px;
@@ -317,10 +389,10 @@ h2{
     font-family: 'Montserrat', sans-serif;
     cursor:pointer;
 }
-.container_corausel{
+nav{
     width:100%;
 }
-.container_corausel>ul{
+nav>ul{
     padding:20px;
     display:flex;
     margin:0 auto;
@@ -330,7 +402,7 @@ h2{
     margin:0 15px;
     position:relative;
 }
-.container_corausel li{
+nav li{
     width: 40px;
     height:40px;
     border-radius: 50%;
@@ -352,7 +424,75 @@ h2{
     font-size: 14px;
     line-height: 12px;
 }
-.page_link:hover{
+.page_link:hover, .page_link.active{
     background:#7E72F2;
     transition:background 0.2s linear;
+    color:#ffffff;
+}
+.back:hover svg, .next:hover svg{
+    stroke:white;
+    transition:all 0.2s linear;
+}
+@media (max-width:1475px){
+    
+    header{
+        width:calc(100%/12*6);
+        padding:0;
+    }
+    .container_right{
+        width: 654px;
+    }
+    .container_product:nth-child(3n+3){
+        padding:0 20px 20px 0;
+    }
+    .container_product:nth-child(2n+2){
+        padding:0 0 20px 0;
+    }
+    .container{
+        padding:0;
+    }
+}
+@media (max-width:1140px){
+    .container_right{
+        width: 317px;
+    }
+    .container_product{
+        padding:0 0 20px 0;
+    }
+    .container_left{
+        width:300px;
+    }
+}
+@media (max-width:1140px){
+    .container_right{
+        width: 317px;
+    }
+    .container_product{
+        padding:0 0 20px 0;
+    }
+    .container_left{
+        width:300px;
+    }
+    nav li:nth-child(n+5){
+        display:none;
+    }
+    nav li:last-child{
+        display:block;
+    }
+}
+@media (max-width:700px){
+    header{
+        width:calc(100%/12*9);
+    }
+    .container_left{
+        display: none;
+    }
+    .container{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .filter{
+        display: block;
+    }
 }
