--- a/components/card/index.html
+++ b/components/card/index.html
@@ -19,16 +19,13 @@
 
         <div class="card_descriptin">
 
-            <div class="card-item_row">
+            <div class="card-item_pr-rt">
 
                 <div class="card_rate">
-
-                    <div class="rate_number">
                       <span>1.23</span>
-                    </div>
 
                     <div>
-                      <img src="./img/Star 1.png" alt="rate-star">
+                      <img src="./img/Star 1.png" alt="rate-star"> <!-- потом звезду через бутстрап -->
                     </div>
                 </div>
 
@@ -37,19 +34,19 @@
                 </div>
             </div>
 
-            <div class="card_title">
+            <h5 class="card_title">
               Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
-            </div>
+            </h5>
 
-            <div class="card_category">
+            <p class="card_category">
               laptops
-            </div>
+            </p>
         </div>
 
-        <div class="card_add-buttom">
-            <div class="add-buttom_title">
-              Add To Cart
-            </div>
+        <div class="card_footer">
+            <button class="add-button">
+              ADD TO CART
+            </button>
       </div>
     </div>
 
