--- a/components/navbar/index.html
+++ b/components/navbar/index.html
@@ -5,9 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+ rel="stylesheet">
   <title>navbar</title>
 </head>
 <body>
+
   <div class="block">
 
     <div class="price-block">
@@ -23,14 +28,17 @@
 
     <div class="category-block">
       <h3>Category</h3>
-       <div class="item"><button class="btn"></button><p>Monitors</p></div>
-       <div class="item"><button class="btn"></button><p>Laptops</p></div>
+      <ul class="category-block">
+       <li class="item"> <button class="btn"><a href="#"></a></button><p>Monitors</p></button></li>
+       <li class="item"><button class="btn"></button><p>Laptops</p></li>
+      </ul>
        <div class="item"><button class="btn"></button><p>Video cards</p></div>
        <div class="item"><button class="btn"></button><p>Caming keyboards</p></div>
        <div class="item"><button class="btn"></button><p>Computer mouse</p></div>
        <div class="item"><button class="btn"></button><p>SSD</p></div>
        <div class="item"><button class="btn"></button><p>Sound cards</p></div>
        <div class="item"><button class="btn"></button><p>RAM</p></div>
+
     </div>
     <div class="line"></div>
 
