--- a/components/navbar/css/style.css
+++ b/components/navbar/css/style.css
@@ -14,7 +14,7 @@
   flex: row;
   position: absolute;
   width: 280px;
-  height: 904px;
+  height:px;
   left: 285px;
   top: 236px;
   background: #FFFFFF;
@@ -58,6 +58,7 @@ h3 {
   width: 20px;
   border-radius: 2px;
   border: 1px solid  #979797;
+  margin-right: 10px;
 }
 .btn:hover {
   border:2px solid #7E72F2;;
@@ -70,7 +71,6 @@ p {
   margin-block-end: 0px;
   margin-block-start: 0px;
   margin-top: 0px;
-  margin-left: 15px;
 }
 .line {
   border-top:1px solid  #D6D6D6; ;
@@ -99,5 +99,8 @@ p {
   text-transform: uppercase;
   font-size: 18px;
 }
-
+ul {
+  padding-left: 0;
+  margin-bottom: 0;
+}
 
