--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,18 +5,30 @@
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
+
 <main>
+  <!-- <i class="bi bi-star"></i> -->
   <div class="wrapper">
-    <!-- Card component -->
+    <img class="" src="https://content.rozetka.com.ua/goods/images/big/211408824.jpg" alt="surface laptop">
+
+    <div class="under-pic">
+      <button class="item-rating">4.11
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+          <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+        </svg>
+      </button>
+
+      <div class="item-price">33 923</div>
+    </div>
+
+    <div class="item-name">Ноутбук MICROSOFT SURFACE LAPTOP 3 15 AMD RYZEN 5 3580U 16GB 256GB SSD MATTE BLACK (V9R-00022)</div>
+    <div class="category">laptops</div>
+    <button class="add-button">Add to cart</button>
   </div>
+
 </main>
 </body>
 </html>
