--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -10,8 +10,6 @@
   height: 100px;
 }
 
-
-
 .general-pages {
   width: 40px;
   height: 40px;
@@ -20,12 +18,18 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  transition: .8s;
+  cursor: pointer;
 }
 
 .general-pages:hover {
-  background-color: azure;
+  background-color: #7E72F2;
+  color: white;
 }
-
+.general-pages:active {
+  background-color: red;
+  color: white;
+}
 .back-button {
   margin-right: 1rem;
   font-size: larger;
