--- a/grid/style.css
+++ b/grid/style.css
@@ -1,8 +1,10 @@
-body{
+html, body{
   margin: 0;
+  height: 100%;
 }
 
 .container {
+  min-height: 100%;
   width: 100%;
   margin-bottom: 30px;
 }
@@ -13,8 +15,8 @@ body{
   flex-wrap: wrap;
 }
 
-.left{
-  height: 720px;
+.height-100 {
+  height: 100%;
 }
 
 div[class^='col-'] {
