optimized code and add index file main project

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../styles/style-card.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         <button class="btn_addToCart">ADD TO CART</button>
       </div>
     </div>
-    </main>
+  </main>
 </body>
 
 </html>
