--- a/styles/style-card.css
+++ b/styles/style-card.css
@@ -1,23 +1,14 @@
-.wrapper {
-  width: 400px;
-  margin: 100px auto;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-}
-
 .card {
-  width: 317px;
-  height: 394px;
-  background: #FFFFFF;
+  box-sizing: border-box;
+  margin: 10px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
+  padding-top: 15px;
+  font-family: Montserrat,sans-serif;
 }
 
 .product_photo {
-  width: 293px;
-  height: 200px;
-  margin: 12px;
+  width: 100%;
 }
 
 .favorite_price {
@@ -35,10 +26,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  color: white;
+  font-size: 14px;
 }
 
 .description {
-  width: 261px;
   margin: 0 24px;
   font-size: 13px;
   line-height: 16px;
@@ -46,17 +38,17 @@
 
 .category {
   margin: 10px 24px;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 12px;
 }
 
 .btn_addToCart {
   border: none;
-  width: 317px;
+  width: 100%;
   height: 40px;
   background: #7E72F2;
   border-radius: 0px 0px 5px 5px;
-  font-size: 12px;
-  line-height: 12px;
+  font-size: 14px;
+  line-height: 14px;
   text-transform: uppercase;
 }
