--- a/styles/style-pagination.css
+++ b/styles/style-pagination.css
@@ -1,27 +1,18 @@
-.wrapper {
-  width: 790px;
-  height: 205px;
-  margin: 100px auto;
-  padding: 82px 100px;
-  background: #FFFFFF;
-}
 
 .pagination {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   padding: 0 90px 0 90px;
 }
 
 .pagination ul {
-  padding-left: 0px;
   display: flex;
 }
 
 .pagination ul li,
 .btn-prev,
 .btn-next {
-  list-style-type: none;
   width: 40px;
   height: 40px;
   display: flex;
@@ -35,7 +26,8 @@
 .pagination ul li:hover,
 .btn-prev:hover,
 .btn-next:hover {
-  border: 1px solid blue;
+  box-sizing: border-box;
+  border: 1px solid #7E72F2;
 }
 
 .pagination ul li:nth-child(1) {
