--- a/grid/media-query-style.css
+++ b/grid/media-query-style.css
@@ -86,6 +86,9 @@ div[class^='col-'] {
 /* xs */
 
 @media (max-width: 575px) {
+    .col-xs-0 {
+        display: none;
+    }
     .col-xs-1 {
         width: calc(100%/12);
     }
@@ -128,6 +131,9 @@ div[class^='col-'] {
 /* s */
 
 @media (min-width: 576px) {
+    .col-s-0 {
+        display: none;
+    }
     .col-s-1 {
         width: calc(100% / 12);
     }
