Added readme.md for each type of task, added previews;

--- a/src/components/cards-list/02-js-task/index.html
+++ b/src/components/cards-list/02-js-task/index.html
@@ -10,7 +10,7 @@
 
   <script type="module">
     import Card from '../../card/example/index.js';
-    import CardsList from './index.js';
+    import CardsList from './solution/index.js';
     import { products } from '../../../fixtures/products.js'
 
     const cardsList = new CardsList({
