--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
   <style>
     .wrapper {
-      width: 800px;
       margin: 100px auto;
     }
   </style>
 </head>
 <body>
+
 <main>
   <div class="wrapper">
     <ul class="os-pagination">
@@ -32,5 +33,6 @@
     </ul>
   </div>
 </main>
+
 </body>
 </html>
