--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -23,7 +23,7 @@
              2
            </div>
          </div></a>
-         <a class="ssylka" href="#"><div class="q">
+         <a class="ssylka" href="#"><div class="q active">
            <div class="text">
              3
            </div>
